<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_wert1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/wert1"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="341dp"
        app:layout_constraintGuide_percent="0.1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edit_wert1">

        <RadioButton
            android:id="@+id/radio_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/plus" />

        <RadioButton
            android:id="@+id/radio_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/minus" />

        <RadioButton
            android:id="@+id/radio_multiply"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/multiply" />

        <RadioButton
            android:id="@+id/radio_divide"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/divide" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_wert2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:hint="@string/wert2"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button_calc"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_ms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_wert2" />

    <Button
        android:id="@+id/button_ms"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="saveValues"
        android:text="@string/ms"
        android:textColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/button_mr"
        app:layout_constraintTop_toBottomOf="@+id/edit_wert2" />

    <Button
        android:id="@+id/button_mr"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_grey"
        android:onClick="readValues"
        android:text="@string/mr"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_wert2" />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/blue"
        android:gravity="right"
        android:text="@string/result_default"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button_calc"
        app:layout_constraintTop_toBottomOf="@+id/button_calc" />

</androidx.constraintlayout.widget.ConstraintLayout>